codex-rs/tui/src/pager_overlay/snapshots/codex_tui__pager_overlay__transcript__tests__transcript_overlay_follows_resized_tail.snap
---
source: tui/src/pager_overlay/legacy_transcript_tests.rs
assertion_line: 553
expression: term.backend()
---
"/ T R A N S C R I P T / / / / / / / / / "
"line16                                  "
"                                        "
"line17                                  "
"                                        "
"line18                                  "
"                                        "
"line19                                  "
"                                        "
"tail                                    "
"Ctrl+Space select                       "
" ↑/↓ to scroll   pgup/pgdn to page   hom"
" q close   f3 find   esc browse prompts "
"                                        "
