codex-rs/tui/src/pager_overlay/snapshots/codex_tui__pager_overlay__transcript__tests__transcript_overlay_paginated_history_states.snap
---
source: tui/src/pager_overlay/legacy_transcript_tests.rs
assertion_line: 270
expression: snapshots
---
--- loading ---
/ T R A N S C R I P T / / / / / / / / / / / / / / / / / / / / / / / / /
recent transcript




↑ Loading earlier messages…



--- partial ---
/ T R A N S C R I P T / / / / / / / / / / / / / / / / / / / / / / / / /
recent transcript




Earlier messages available.  Ctrl+Space select
 ↑/↓ to scroll   pgup/pgdn to page   home/end to jump
 q close   esc edit previous

--- failed ---
/ T R A N S C R I P T / / / / / / / / / / / / / / / / / / / / / / / / /
recent transcript




Retry history: ⌥ + </ctrl + home.



--- complete ---
/ T R A N S C R I P T / / / / / / / / / / / / / / / / / / / / / / / / /
recent transcript




Ctrl+Space select
 ↑/↓ to scroll   pgup/pgdn to page   home/end to jump
 q close   esc edit previous
