codex-rs/tui/src/pager_overlay/snapshots/codex_tui__pager_overlay__transcript__tests__transcript_overlay_renders_live_tail.snap
---
source: tui/src/pager_overlay/legacy_transcript_tests.rs
assertion_line: 345
expression: term.backend()
---
"/ T R A N S C R I P T / / / / / / / / / "
"alpha                                   "
"                                        "
"tail                                    "
"                                        "
"                                        "
"Ctrl+Space select                       "
" ↑/↓ to scroll   pgup/pgdn to page   hom"
" q close   esc edit previous            "
"                                        "
